[gd_scene load_steps=2 format=3 uid="uid://circular_menu_scene"]

[ext_resource type="Script" path="res://scenes/CircularMenu.gd" id="1"]

[node name="CircularMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.85)

[node name="ToggleButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
offset_left = 20.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.933333, 1)
theme_override_font_sizes/font_size = 24
text = "☰"
flat = true

[node name="HintLabel" type="Label" parent="ToggleButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -15.0
offset_right = 120.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.933333, 1)
theme_override_font_sizes/font_size = 11
text = "Click to navigate"
vertical_alignment = 1

[node name="PieMenuContainer" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -210.0
offset_right = 210.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="RotatingContainer" type="Control" parent="PieMenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -210.0
offset_right = 210.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(210, 210)

[node name="SegmentsCanvas" type="Node2D" parent="PieMenuContainer/RotatingContainer"]
position = Vector2(210, 210)
z_index = -1

[node name="CenterButton" type="Button" parent="PieMenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(55, 55)
theme_override_colors/font_color = Color(0.780392, 0.12549, 0.439216, 1)
theme_override_font_sizes/font_size = 20
text = "✖"
flat = true
